; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_bodyfilterby.c_ngx_http_lua_body_filter_by_lua_env.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_bodyfilterby.c_ngx_http_lua_body_filter_by_lua_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@ngx_http_lua_module = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @ngx_http_lua_body_filter_by_lua_env to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_http_lua_body_filter_by_lua_env(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @ngx_http_lua_set_req(i32* %8, i32* %9)
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @ngx_http_lua_module, align 4
  %13 = call %struct.TYPE_3__* @ngx_http_get_module_main_conf(i32* %11, i32 %12)
  store %struct.TYPE_3__* %13, %struct.TYPE_3__** %7, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i32* %14, i32** %16, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @ngx_http_lua_create_new_globals_table(i32* %17, i32 0, i32 1)
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @lua_createtable(i32* %19, i32 0, i32 1)
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @ngx_http_lua_get_globals_table(i32* %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @lua_setfield(i32* %23, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @lua_setmetatable(i32* %25, i32 -2)
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @lua_setfenv(i32* %27, i32 -2)
  ret void
}

declare dso_local i32 @ngx_http_lua_set_req(i32*, i32*) #1

declare dso_local %struct.TYPE_3__* @ngx_http_get_module_main_conf(i32*, i32) #1

declare dso_local i32 @ngx_http_lua_create_new_globals_table(i32*, i32, i32) #1

declare dso_local i32 @lua_createtable(i32*, i32, i32) #1

declare dso_local i32 @ngx_http_lua_get_globals_table(i32*) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i32 @lua_setfenv(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
